2002-12-04  Fumitoshi UKAI  <ukai@debian.or.jp>

	* NEWS: 2 stroke keybinding
		func: MULTIMAP

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03515] 2 stroke keybinding
	* func.c (setKeymap): add map
				K_MULTI support
		(getKey2): added
		(getKey): rewrite to use getKey2()
	* func.h (K_MULTI): added
		(MULTI_KEY): added
	* funcname.tab (MULTIMAP): added
	* main.c (escKeyProc): added
		(escmap): rewrite to use escKeyProc()
		(escbmap): rewrite to use escKeyProc()
		(escdmap): rewrite to use escKeyProc()
		(multimap): added
	* proto.h (multimap): added

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03514] Effect of tab title
	* display.c (redrawNLine): rewrite, do without clrtoeolx()

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03512] Re: HTML parser
	* table.c (feed_table_tag): HTML_N_SELECT, HTML_N_CAPTION

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03510] waiting time when cookie was rejected.
	* file.c (readHeader): display cookie warnings for only 1 sec 

2002-12-04  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 03509] HTML parser
	* file.c (close_textarea): delete
		(HTMLtagproc1): rewrite 
				delete HTML_EOL
				move HTML_LISTING, HTML_N_LISTING
				add HTML_PRE_PLAIN, HTML_N_PRE_PLAIN
				add HTML_PLAINTEXT
				end_tag
		(HTMLlineproc0): s/str/line/
				rewrite
		(completeHTMLstream): </textarea> if necessary
	* fm.h (struct readbuffer): delete ignore_tag
				add end_tag
		(RB_XMPMODE): deleted
		(RB_LSTMODE): deleted
		(RB_SCRIPT): added
		(RB_STYLE): added
		(RB_*): renumber
		(R_ST_EOL): added
		(R_ST_*): renumber
		(ST_IS_TAG): check R_ST_EOL
	* form.c (form_fputs_decode): remove <eol> handling
	* frame.c (newFrame): remove_space()
		(CASE_TABLE_TAG): added
		(createFrameFile): rewrite
	* html.c (TagMAP): delete eol
			add pre_plain, /pre_plain
	* html.h (HTML_EOL): deleted
		(HTML_PRE_PLAIN): added
		(HTML_N_PRE_PLAIN): added